FIX: changed cors settings